src/assets/styles.css
/*! normalize.css v1.1.2 | MIT License | git.io/normalize */
article,
aside,
details,
figcaption,
figure,
footer,
header,
hgroup,
main,
nav,
section,
summary {
  display: block
}

audio,
canvas,
video {
  display: inline-block;
  *display: inline;
  *zoom: 1
}

audio:not([controls]) {
  display: none;
  height: 0
}

[hidden] {
  display: none
}

html {
  font-size: 100%;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%
}

html,
button,
input,
select,
textarea {
  font-family: sans-serif
}

body {
  margin: 0
}

a:focus {
  outline: thin dotted
}

a:active,
a:hover {
  outline: 0
}

h1 {
  font-size: 2em;
  margin: 0.67em 0
}

h2 {
  font-size: 1.5em;
  margin: 0.83em 0;
  color: #BD2408;
  letter-spacing: 1px;
  font-weight: normal;
  text-decoration: none
}

h3 {
  font-size: 1.2em;
  margin: 1em 0
}

h4 {
  font-size: 1em;
  margin: 1.33em 0
}

h5 {
  font-size: 0.83em;
  margin: 1.67em 0
}

h6 {
  font-size: 0.67em;
  margin: 2.33em 0
}

abbr[title] {
  border-bottom: 1px dotted
}

b,
strong {
  font-weight: bold
}

blockquote {
  margin: 1em 40px
}

dfn {
  font-style: italic
}

hr {
  -moz-box-sizing: content-box;
  box-sizing: content-box;
  height: 0
}

mark {
  background: #ff0;
  color: #000
}

p,
pre {
  margin: 1em 0
}

code,
kbd,
pre,
samp {
  font-family: monospace, serif;
  _font-family: 'courier new', monospace;
  font-size: 1em
}

pre {
  white-space: pre;
  white-space: pre-wrap;
  word-wrap: break-word
}

q {
  quotes: none
}

q:before,
q:after {
  content: '';
  content: none
}

small {
  font-size: 80%
}

sub,
sup {
  font-size: 75%;
  line-height: 0;
  position: relative;
  vertical-align: baseline
}

sup {
  top: -0.5em
}

sub {
  bottom: -0.25em
}

dl,
menu,
ol,
ul {
  margin: 1em 0
}

dd {
  margin: 0 0 0 40px
}

menu,
ol,
ul {
  padding: 0 0 0 40px
}

nav ul,
nav ol {
  list-style: none;
  list-style-image: none
}

img {
  border: 0;
  -ms-interpolation-mode: bicubic
}

svg:not(:root) {
  overflow: hidden
}

figure {
  margin: 0
}

form {
  margin: 0
}

fieldset {
  border: 1px solid #c0c0c0;
  margin: 0 2px;
  padding: 0.35em 0.625em 0.75em
}

legend {
  border: 0;
  padding: 0;
  white-space: normal;
  *margin-left: -7px
}

button,
input,
select,
textarea {
  font-size: 100%;
  margin: 0;
  vertical-align: baseline;
  *vertical-align: middle
}

button,
input {
  line-height: normal
}

button,
select {
  text-transform: none
}

button,
html input[type="button"],
input[type="reset"],
input[type="submit"] {
  -webkit-appearance: button;
  cursor: pointer;
  *overflow: visible
}

button[disabled],
html input[disabled] {
  cursor: default
}

input[type="checkbox"],
input[type="radio"] {
  box-sizing: border-box;
  padding: 0;
  *height: 13px;
  *width: 13px
}

input[type="search"] {
  -webkit-appearance: textfield;
  -moz-box-sizing: content-box;
  -webkit-box-sizing: content-box;
  box-sizing: content-box
}

input[type="search"]::-webkit-search-cancel-button,
input[type="search"]::-webkit-search-decoration {
  -webkit-appearance: none
}

button::-moz-focus-inner,
input::-moz-focus-inner {
  border: 0;
  padding: 0
}

textarea {
  overflow: auto;
  vertical-align: top
}

table {
  border-collapse: collapse;
  border-spacing: 0
}

body {
  margin: 1em
}

a {
  color: #2361A1;
  text-decoration: none
}

p.address {
  font-style: italic;
  margin: 0.5em 0;
  font-size: 0.95em;
}

h3 {
  color: #FFA500
}

h4 {
  margin: 0;
  font-weight: normal
}

h4.neighborhood {
  color: #BD2408;
  margin: 1em 0;
  font-weight: bold;
  font-size: 1.1em;
}

h4.venue {
  font-weight: bold;
  font-size: 1em;
}

li {
  margin-left: 2em;
}

span.title {
  font-size: 1em;
  font-weight: bold;
}

#footer {
  margin-top: 4em;
  border-top: 1px solid black
}

